traces/bug_688.txt
src/medit/menus.c:1160: error: DEAD_STORE
  The value written to &menu (type int) is never used.
Showing all 1 steps of the trace


src/medit/menus.c:1160:3: Write of unused value
1158.   
1159.     /* main scene menu */
1160.     menu = glutCreateMenu(menuScene);
          ^
1161.     glutAddSubMenu("File",fmenu);
1162.     glutAddSubMenu("Render mode",mmenu);
